--- a/main.css
+++ b/main.css
@@ -31,6 +31,31 @@ body {
   }
 }
 
+.team__container {
+  background-color: #f4f5f7;
+  padding: 32px;
+}
+
+.team__info {
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 650 px;
+  text-align: center;
+}
+
+.team__info > h1 {
+  margin: 0 0 12px;
+  font-size: 24 px;
+  font-weight: 600;
+  line-height: 28 px;
+}
+
+.team__info > a {
+  color: #172b4d;
+  line-height: 20 px;
+  font-weight: normal;
+}
+
 /* Supplied CSS follows. */
 .header-nav__group {
   display: flex;
