--- a/main.css
+++ b/main.css
@@ -91,6 +91,59 @@ body {
   font-weight: normal;
 }
 
+.boards__container {
+  margin: 0 auto;
+  padding: 32px;
+  max-width: 1400px;
+}
+
+.boards__container {
+  display: flex;
+  /* flex-direction: column;
+  flex-wrap: wrap; */
+}
+
+.boards__sidebar {
+  background-color: #6c547b;
+  border-radius: 3px;
+  margin: 0 32px 32px 0;
+  padding: 0 20px 32px 20px;
+  max-height: 130px;
+  max-width: 180px;
+  width: 20%;
+  flex-basis: 220px;
+}
+
+.boards__sidebar-content,
+a,
+title {
+  color: white;
+}
+
+.boards__sidebar-content .description {
+  color: lightblue;
+}
+
+.boards__group {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+}
+
+.boards__board {
+  background-color: hotpink;
+  border-radius: 3px;
+  box-sizing: border-box;
+  font-weight: bold;
+  height: 100px;
+  margin: 0 8px 16px;
+  max-width: 250px;
+  padding: 4px 8px;
+  position: relative;
+  color: white;
+  width: 25%;
+}
+
 /* Supplied CSS follows. */
 .header-nav__group {
   display: flex;
