--- a/main.css
+++ b/main.css
@@ -95,12 +95,9 @@ body {
   margin: 0 auto;
   padding: 32px;
   max-width: 1400px;
-}
-
-.boards__container {
   display: flex;
-  /* flex-direction: column;
-  flex-wrap: wrap; */
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .boards__sidebar {
